objects/CMPL123__Parent_Child_Audit_Trail_View__mdt.object
<CustomObject>
    <description>Parent Child Audit Trail View</description>
    <fields>
        <fullName>CMPL123__Child_Object__c</fullName>
        <description>Child Object</description>
        <label>Child Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Audit_Trail_View_As_Child</relationshipLabel>
        <relationshipName>Audit_Trail_View_As_Child</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>CMPL123__Child_Parent_Field_Relationship__c</fullName>
        <description>Field on the Child Object that references the Parent Object</description>
        <label>Child Parent Field Relationship</label>
        <metadataRelationshipControllingField>CMPL123__Parent_Child_Audit_Trail_View__mdt.CMPL123__Child_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Parent_Child_Audit_Trail_View</relationshipLabel>
        <relationshipName>Parent_Child_Audit_Trail_View</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>CMPL123__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to determine if this configuration is Active</description>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123__Parent_Object__c</fullName>
        <description>Parent Object</description>
        <label>Parent Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Audit_Trail_View_As_Parent</relationshipLabel>
        <relationshipName>Audit_Trail_View_As_Parent</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <label>Parent Child Audit Trail View</label>
    <pluralLabel>Parent Child Audit Trail View</pluralLabel>
</CustomObject>